Patched insert and service